test/scc/expr/semantic-errors/106.t
void foo(int a)
{
    
}

void test()
{
    foo(10, 20);
}